test/bitfield3.l1.out
warning: name space references undefined type:
	foo
error: attempt to read object of undefined type: foo
                cval	(builtin function)
               entry	(bitfield3.l1:85)
